<resources>
    <string name="app_name">CalculatorNewFull</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn9">9</string>
    <string name="btn8">8</string>
    <string name="btn7">7</string>
    <string name="btn6">6</string>
    <string name="btn5">5</string>
    <string name="btn4">4</string>
    <string name="btnplus">+</string>
    <string name="btnMinus">-</string>
    <string name="btn3">3</string>
    <string name="btn2">2</string>
    <string name="btn1">1</string>
    <string name="btnDiv">/</string>
    <string name="btnMul">*</string>
    <string name="btnEqual">=</string>
    <string name="btn0">0</string>
    <string name="btnC">.</string>
    <string name="X2">x²</string>

</resources>
