<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/rqualBtn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/display" />

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp">

    <Button
        style="@style/WigitButtonStyl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshap"
        android:text="C"
        android:id="@+id/Cbtn"
        android:onClick="clickedBtnClear"
        />
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/X2"
        android:background="@drawable/buttonshap"
        android:id="@+id/btnX2"

        android:onClick="clickedBtnx2"
        android:textColor="#E2EEF5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/buttonshap"
        android:text="ln"
        android:id="@+id/btnlog"
        android:onClick="clickedBtnlog"
        android:textColor="#E2EEF1" />


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cos"
            style="@style/WigitButtonStyl"
            android:background="@drawable/buttonshap"
            android:onClick="clickedCos"
            android:id="@+id/CosBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sin"
            style="@style/WigitButtonStyl"
            android:onClick="clickedSin"
            android:background="@drawable/buttonshap"
            android:id="@+id/SinBtn"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tan"
            style="@style/WigitButtonStyl"
            android:background="@drawable/buttonshap"
            android:onClick="clickedtan"
            android:id="@+id/TanBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="√"
            style="@style/WigitButtonStyl"
            android:background="@drawable/buttonshap"
            android:onClick="clickedSqrt"
            android:id="@+id/SqrtBtn"/>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn9"
            android:id="@+id/nineBtn"
            android:background="@drawable/buttonshap"
            android:onClick="clickedBtn9"/>
        <Button
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn8"
            android:id="@+id/eightBtn"
            android:background="@drawable/buttonshap"
            android:onClick="clickedBtn8"/>
        <Button
            android:onClick="clickedBtn7"
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn7"
            android:id="@+id/svnBtn"
            android:background="@drawable/buttonshap"/>
        <Button
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnplus"
            android:id="@+id/plusBtn"
            android:onClick="clickedBtnplus"
            android:background="@drawable/buttonshap"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:onClick="clickedBtn6"
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn6"
            android:id="@+id/sixBtn"
            android:background="@drawable/buttonshap"/>
        <Button
            android:onClick="clickedBtn5"
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn5"
            android:id="@+id/fiveBtn"
            android:background="@drawable/buttonshap"/>
        <Button
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn4"
            android:id="@+id/fourBtn"
            android:onClick="clickedBtn4"
            android:background="@drawable/buttonshap"/>
        <Button
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMinus"
            android:id="@+id/minusBtn"
            android:onClick="clickedMinus"
            android:background="@drawable/buttonshap"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:onClick="clickedBtn3"
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn3"
            android:id="@+id/threeBtn"
            android:background="@drawable/buttonshap"/>
        <Button
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn2"
            android:id="@+id/twoBtn"
            android:onClick="clickedBtn2"
            android:background="@drawable/buttonshap"/>
        <Button
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            android:onClick="clickedBtn1"
            android:id="@+id/oneBtn"
            android:background="@drawable/buttonshap"/>
        <Button
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDiv"
            android:id="@+id/devideBtn"
            android:onClick="clickedBtnDiv"
            android:background="@drawable/buttonshap"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnC"
            android:id="@+id/dotbtn"
            android:onClick="clickedBtndot"
            android:background="@drawable/buttonshap"/>

        <Button
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn0"
            android:id="@+id/zeroBtn"
            android:onClick="clickedBtn0"
            android:background="@drawable/buttonshap"/>
        <Button
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEqual"
            android:id="@+id/rqualBtn"
            android:onClick="clickedBtnequal"
            android:background="@drawable/buttonshap"/>
        <Button
            style="@style/WigitButtonStyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMul"
            android:onClick="clickedBtnMul"
            android:id="@+id/mulBtn"
            android:background="@drawable/buttonshap"
            />


    </LinearLayout>



</LinearLayout>
